--- a/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
+++ b/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
@@ -23,11 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad51c82453074220bf77296436354fd9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Turtle()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    ">>> import turtle\n",
+    "#>>> import turtle # '#' inserido no começo da linha para não rodar no jupyter notebook / binder \n",
+    ">>> import mobilechelonian as turtle # linha inserida para rodar no jupyter notebook / binder\n",
     ">>> bob = turtle.Turtle()"
    ]
   },
@@ -85,11 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bob.fd(100)"
+    "bob.forward(100)"
    ]
   },
   {
@@ -704,7 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
