--- a/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
+++ b/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
@@ -23,24 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad51c82453074220bf77296436354fd9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Turtle()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#>>> import turtle # '#' inserido no começo da linha para não rodar no jupyter notebook / binder \n",
     ">>> import mobilechelonian as turtle # linha inserida para rodar no jupyter notebook / binder\n",
@@ -131,9 +116,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bob.fd(100)\n",
-    "bob.lt(90)\n",
-    "bob.fd(100)"
+    "bob.forward(100)\n",
+    "bob.left(90)\n",
+    "bob.forward(100)"
    ]
   },
   {
@@ -157,13 +142,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bob.fd(100)\n",
-    "bob.lt(90)\n",
-    "bob.fd(100)\n",
-    "bob.lt(90)\n",
-    "bob.fd(100)\n",
-    "bob.lt(90)\n",
-    "bob.fd(100)"
+    "bob.forward(100)\n",
+    "bob.left(90)\n",
+    "bob.forward(100)\n",
+    "bob.left(90)\n",
+    "bob.forward(100)\n",
+    "bob.left(90)\n",
+    "bob.forward(100)"
    ]
   },
   {
@@ -222,8 +207,8 @@
    "outputs": [],
    "source": [
     "for i in range(4):\n",
-    "    bob.fd(100)\n",
-    "    bob.lt(90)"
+    "    bob.forward(100)\n",
+    "    bob.left(90)"
    ]
   },
   {
@@ -282,8 +267,8 @@
    "source": [
     "def square(t):\n",
     "    for i in range(4):\n",
-    "        t.fd(100)\n",
-    "        t.lt(90)\n",
+    "        t.forward(100)\n",
+    "        t.left(90)\n",
     "\n",
     "square(bob)"
    ]
@@ -330,8 +315,8 @@
    "source": [
     "def square(t, length):\n",
     "    for i in range(4):\n",
-    "        t.fd(length)\n",
-    "        t.lt(90)\n",
+    "        t.forward(length)\n",
+    "        t.left(90)\n",
     "\n",
     "square(bob, 100)"
    ]
@@ -356,8 +341,8 @@
     "def polygon(t, n, length):\n",
     "    angle = 360 / n\n",
     "    for i in range(n):\n",
-    "        t.fd(length)\n",
-    "        t.lt(angle)\n",
+    "        t.forward(length)\n",
+    "        t.left(angle)\n",
     "\n",
     "polygon(bob, 7, 70)"
    ]
@@ -473,8 +458,8 @@
     "    step_length = arc_length / n\n",
     "    step_angle = angle / n\n",
     "    for i in range(n):\n",
-    "        t.fd(step_length)\n",
-    "        t.lt(step_angle)"
+    "        t.forward(step_length)\n",
+    "        t.left(step_angle)"
    ]
   },
   {
@@ -494,8 +479,8 @@
    "source": [
     "def polyline(t, n, length, angle):\n",
     "    for i in range(n):\n",
-    "        t.fd(length)\n",
-    "        t.lt(angle)"
+    "        t.forward(length)\n",
+    "        t.left(angle)"
    ]
   },
   {
@@ -593,8 +578,8 @@
     "    ângulo (em graus) entre eles. t é um turtle.\n",
     "    \"\"\"\n",
     "    for i in range(n):\n",
-    "        t.fd(length)\n",
-    "        t.lt(angle)"
+    "        t.forward(length)\n",
+    "        t.left(angle)"
    ]
   },
   {
