Revising text style in Chapters 00, 01, 04 and 06

--- a/Capítulo 00 - Prefácio.ipynb
+++ b/Capítulo 00 - Prefácio.ipynb
@@ -25,7 +25,7 @@
     "<p>que o conteúdo fosse concentrado em programar mesmo, não na linguagem de programação. Selecionei um subconjunto mínimo útil do Java e omiti o resto.</p>\n",
     "</li>\n",
     "</ul>\n",
-    "<p>Eu precisava de um título, então, por capricho, decidi chamá-lo de <em>Pense como um cientista da computação</em>.</p>\n",
+    "<p>Eu precisava de um título, então, por capricho, decidi chamá-lo de \"Pense como um cientista da computação\".</p>\n",
     "<p>A minha primeira versão era apenas um esboço, mas funcionou. Os alunos liam e entendiam o suficiente para podermos usar o tempo de aula para os tópicos difíceis, interessantes e (o mais importante) para permitir que os alunos praticassem.</p>\n",
     "<p>Lancei o livro sob uma Licença de Documentação Livre GNU, que permite aos usuários copiar, modificar e distribuir o livro.</p>\n",
     "<p>E o que aconteceu em seguida foi legal. Jeff Elkner, um professor de ensino médio na Virgínia adotou meu livro e o traduziu para Python. Ele me enviou uma cópia de sua tradução e tive a experiência excepcional de aprender Python lendo o meu próprio livro. Com a editora Green Tea, publiquei a primeira versão em Python em 2001.</p>\n",
@@ -34,10 +34,10 @@
     "<p>O resultado está aqui, agora com o título menos grandioso de <em>Pense em Python</em>. Fiz algumas alterações:</p>\n",
     "<ul>\n",
     "<li>\n",
-    "<p>Acrescentei uma seção sobre depuração (debugging) no fim de cada capítulo. Essas seções apresentam técnicas gerais para encontrar e evitar bugs (erros de programação) e avisos sobre armadilhas do Python.</p>\n",
+    "<p>Acrescentei uma seção sobre depuração (<em>debugging</em>) no fim de cada capítulo. Essas seções apresentam técnicas gerais para encontrar e evitar <em>bugs</em> (erros de programação) e avisos sobre armadilhas do Python.</p>\n",
     "</li>\n",
     "<li>\n",
-    "<p>Acrescentei exercícios, incluindo testes curtos de compreensão e alguns projetos substanciais. A maior parte dos exercícios tem um link para a minha solução.</p>\n",
+    "<p>Acrescentei exercícios, incluindo testes curtos de compreensão e alguns projetos substanciais. A maior parte dos exercícios tem um <em>link</em> para a minha solução.</p>\n",
     "</li>\n",
     "<li>\n",
     "<p>Acrescentei uma série de estudos de caso – exemplos mais longos com exercícios, soluções e discussões.</p>\n",
@@ -49,16 +49,16 @@
     "<p>Acrescentei apêndices sobre depuração e análise de algoritmos.</p>\n",
     "</li>\n",
     "</ul>\n",
-    "<p>Esta edição de <em>Pense em Python</em> tem as seguintes novidades:</p>\n",
+    "<p>Esta edição de \"Pense em Python\" tem as seguintes novidades:</p>\n",
     "<ul>\n",
     "<li>\n",
     "<p>O livro e todo o código de apoio foram atualizados para o Python 3.</p>\n",
     "</li>\n",
     "<li>\n",
-    "<p>Acrescentei algumas seções e mais detalhes sobre a web, para ajudar os principiantes a executar o Python em um navegador, e não ter que lidar com a instalação do programa até que seja necessário.</p>\n",
+    "<p>Acrescentei algumas seções e mais detalhes sobre a <em>web</em>, para ajudar os principiantes a executar o Python em um navegador, e não ter que lidar com a instalação do programa até que seja necessário.</p>\n",
     "</li>\n",
     "<li>\n",
-    "<p>Para <a href=\"/PenseAllen/PensePython2e/blob/master/docs/04-caso-interface.md#42---m%C3%B3dulo-turtle\">“Módulo turtle”</a> troquei meu próprio pacote gráfico turtle, chamado Swampy, para um módulo Python mais padronizado, turtle, que é mais fácil de instalar e mais eficiente.</p>\n",
+    "<p>Para <a href=\"/PenseAllen/PensePython2e/blob/master/docs/04-caso-interface.md#42---m%C3%B3dulo-turtle\">“Módulo turtle”</a> troquei meu próprio pacote gráfico turtle, chamado Swampy, para um módulo Python mais padronizado, <code>turtle</code>, que é mais fácil de instalar e mais eficiente.</p>\n",
     "</li>\n",
     "<li>\n",
     "<p>Acrescentei um novo capítulo chamado <a href=\"/PenseAllen/PensePython2e/blob/master/docs/19-extra.md\">“Extra”</a>, que introduz alguns recursos adicionais do Python, não estritamente necessários, mas às vezes práticos.</p>\n",
@@ -82,11 +82,11 @@
     "<h2><a href=\"#uso-do-código-dos-exemplos-de-acordo-com-a-política-da-oreilly\" aria-hidden=\"true\" class=\"anchor\" id=\"user-content-uso-do-código-dos-exemplos-de-acordo-com-a-política-da-oreilly\"><svg aria-hidden=\"true\" class=\"octicon octicon-link\" height=\"16\" version=\"1.1\" viewBox=\"0 0 16 16\" width=\"16\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>Uso do código dos exemplos (de acordo com a política da O'Reilly)</h2>\n",
     "<p>Há material suplementar (exemplos de código, exercícios etc.) disponível para baixar em <a href=\"http://www.greenteapress.com/thinkpython2/code\" rel=\"nofollow\">http://www.greenteapress.com/thinkpython2/code</a>.</p>\n",
     "<p>Este livro serve para ajudar você a fazer o que precisa. Em geral, se o livro oferece exemplos de código, você pode usá-los nos seus programas e documentação. Não é preciso entrar em contato conosco para pedir permissão, a menos que esteja reproduzindo uma porção significativa do código. Por exemplo, escrever um programa que use vários pedaços de código deste livro não exige permissão. Vender ou distribuir um CD-ROM de exemplos dos livros da O’Reilly exige permissão. Responder a uma pergunta citando este livro e reproduzindo exemplos de código não exige permissão. Incorporar uma quantidade significativa de exemplos de código deste livro na documentação do seu produto exige permissão.</p>\n",
-    "<p>Agradecemos, mas não exigimos, crédito. O crédito normalmente inclui o título, o autor, a editora e o ISBN. Por exemplo: “<em>Pense em Python</em>, 2ª edição, por Allen B. Downey (O’Reilly). Copyright 2016 Allen Downey, 978-1-4919-3936-9.”</p>\n",
+    "<p>Agradecemos, mas não exigimos, crédito. O crédito normalmente inclui o título, o autor, a editora e o ISBN. Por exemplo: “Pense em Python, 2ª edição, por Allen B. Downey (O’Reilly). Copyright 2016 Allen Downey, 978-1-4919-3936-9.”</p>\n",
     "<p>Se acreditar que o seu uso dos exemplos de código não se ajusta à permissão dada anteriormente, fique à vontade para entrar em contato conosco pelo email <code>permissions@oreilly.com</code>.</p>\n",
     "<h2><a href=\"#como-entrar-em-contato-conosco\" aria-hidden=\"true\" class=\"anchor\" id=\"user-content-como-entrar-em-contato-conosco\"><svg aria-hidden=\"true\" class=\"octicon octicon-link\" height=\"16\" version=\"1.1\" viewBox=\"0 0 16 16\" width=\"16\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>Como entrar em contato conosco</h2>\n",
     "<p>Envie comentários e dúvidas sobre este livro à editora, escrevendo para: <code>novatec@novatec.com.br</code>.</p>\n",
-    "<p>Temos uma página web para este livro na qual incluímos erratas, exemplos e quaisquer outras informações adicionais.</p>\n",
+    "<p>Temos uma página <em>web</em> para este livro na qual incluímos erratas, exemplos e quaisquer outras informações adicionais.</p>\n",
     "<ul>\n",
     "<li>Página da edição em português</li>\n",
     "</ul>\n",
@@ -100,8 +100,8 @@
     "<p>Muito obrigado a Jeff Elkner, que traduziu meu livro de Java para o Python, o que deu início a este projeto e me apresentou ao que acabou sendo a minha linguagem favorita.</p>\n",
     "<p>Agradeço também a Chris Meyers, que contribuiu em várias seções do <em>Pense como um cientista da computação</em>.</p>\n",
     "<p>Obrigado à Fundação do Software Livre pelo desenvolvimento da Licença de Documentação Livre GNU, que me ajudou a tornar possível a colaboração com Jeff e Chris, e ao Creative Commons pela licença que estou usando agora.</p>\n",
-    "<p>Obrigado aos editores do Lulu, que trabalharam no <em>Pense como um cientista da computação</em>.</p>\n",
-    "<p>Obrigado aos editores da O’Reilly Media, que trabalharam no <em>Pense em Python</em>.</p>\n",
+    "<p>Obrigado aos editores do Lulu, que trabalharam no \"Pense como um cientista da computação\".</p>\n",
+    "<p>Obrigado aos editores da O’Reilly Media, que trabalharam no \"Pense em Python\".</p>\n",
     "<p>Obrigado a todos os estudantes que trabalharam com versões anteriores deste livro e a todos os contribuidores (listados a seguir) que enviaram correções e sugestões.</p>\n",
     "<h2><a href=\"#lista-de-contribuidores\" aria-hidden=\"true\" class=\"anchor\" id=\"user-content-lista-de-contribuidores\"><svg aria-hidden=\"true\" class=\"octicon octicon-link\" height=\"16\" version=\"1.1\" viewBox=\"0 0 16 16\" width=\"16\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>Lista de contribuidores</h2>\n",
     "<p>Mais de cem leitores perspicazes e atentos enviaram sugestões e correções nos últimos anos. Suas contribuições e entusiasmo por este projeto foram inestimáveis.</p>\n",
@@ -193,7 +193,7 @@
     "<p>Moshe Zadka fez contribuições inestimáveis para este projeto. Além de escrever o primeiro rascunho do capítulo sobre Dicionários, ele forneceu orientação contínua nas primeiras etapas do livro.</p>\n",
     "</li>\n",
     "<li>\n",
-    "<p>Christoph Zwerschke enviou várias correções e sugestões pedagógicas, e explicou a diferença entre gleich e selbe.</p>\n",
+    "<p>Christoph Zwerschke enviou várias correções e sugestões pedagógicas, e explicou a diferença entre <em>gleich</em> e <em>selbe</em>.</p>\n",
     "</li>\n",
     "<li>\n",
     "<p>James Mayer enviou-nos um monte de erros tipográficos e ortográficos, inclusive dois da lista de contribuidores.</p>\n",
@@ -328,7 +328,7 @@
     "<p>Adam Hobart corrigiu um problema com a divisão pelo piso em arc.</p>\n",
     "</li>\n",
     "<li>\n",
-    "<p>Daryl Hammond e Sarah Zimmerman indicaram que eu trouxe o math.pi para a mesa cedo demais. E Zim achou um erro de ortografia.</p>\n",
+    "<p>Daryl Hammond e Sarah Zimmerman indicaram que eu trouxe o <code>math.pi</code> para a mesa cedo demais. E Zim achou um erro de ortografia.</p>\n",
     "</li>\n",
     "<li>\n",
     "<p>George Sass encontrou um bug em uma seção de depuração.</p>\n",
@@ -412,7 +412,7 @@
     "<p>Karen Barber achou o erro de ortografia mais antigo no livro.</p>\n",
     "</li>\n",
     "<li>\n",
-    "<p>Nam Nguyen encontrou um erro de ortografia e indicou que usei o Decorator, mas não mencionei o nome.</p>\n",
+    "<p>Nam Nguyen encontrou um erro de ortografia e indicou que usei o <em>Decorator</em>, mas não mencionei o nome.</p>\n",
     "</li>\n",
     "<li>\n",
     "<p>Stéphane Morin enviou várias correções e sugestões.</p>\n",
@@ -448,7 +448,7 @@
     "<p>Swarup Sahoo notou que faltava um ponto e vírgula.</p>\n",
     "</li>\n",
     "<li>\n",
-    "<p>Frank Hecker indicou que um exercício estava mal especificado e encontrou alguns links quebrados.</p>\n",
+    "<p>Frank Hecker indicou que um exercício estava mal especificado e encontrou alguns <em>links</em> quebrados.</p>\n",
     "</li>\n",
     "<li>\n",
     "<p>Animesh B me ajudou a esclarecer um exemplo confuso.</p>\n",
@@ -529,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
