--- a/Capítulo 01 - A Jornada do Programa.ipynb
+++ b/Capítulo 01 - A Jornada do Programa.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "Há duas versões do Python, o Python 2 e o Python 3. Como elas são muito semelhantes, se você aprender uma versão, é fácil trocar para a outra. Como é iniciante, você encontrará poucas diferenças. Este livro foi escrito para o Python 3, mas também incluí algumas notas sobre o Python 2.\n",
     "\n",
-    "O __interpretador__ do Python é um programa que lê e executa o código Python. Dependendo do seu ambiente, é possível iniciar o interpretador clicando em um ícone, ou digitando python em uma linha de comando. Quando ele iniciar, você deverá ver uma saída como esta:"
+    "O __interpretador__ do Python é um programa que lê e executa o código Python. Dependendo do seu ambiente, é possível iniciar o interpretador clicando em um ícone, ou digitando `python` em uma linha de comando. Quando ele iniciar, você deverá ver uma saída como esta:"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "\n",
     "Os parênteses indicam que o `print` é uma função. Veremos funções no Capítulo 3.\n",
     "\n",
-    "No Python 2, a instrução print é ligeiramente diferente; ela não é uma função, portanto não usa parênteses."
+    "No Python 2, a instrução `print` é ligeiramente diferente; ela não é uma função, portanto não usa parênteses."
    ]
   },
   {
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Em algumas outras linguagens, o `^` é usado para a exponenciação, mas no Python é um operador bitwise, chamado XOR. Se não tiver familiaridade com operadores bitwise, o resultado o surpreenderá:"
+    "Em algumas outras linguagens, o `^` é usado para a exponenciação, mas no Python é um operador bitwise, chamado XOR. Se não tiver familiaridade com operadores _bitwise_, o resultado o surpreenderá:"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Não abordarei operadores bitwise neste livro, mas você pode ler sobre eles em http://wiki.python.org/moin/BitwiseOperators.\n",
+    "Não abordarei operadores _bitwise_ neste livro, mas você pode ler sobre eles em http://wiki.python.org/moin/BitwiseOperators.\n",
     "\n",
     "## 1.5 - Valores e tipos\n",
     "\n",
@@ -322,15 +322,15 @@
     "\n",
     "As **linguagens formais** são linguagens criadas pelas pessoas para aplicações específicas. Por exemplo, a notação que os matemáticos usam é uma linguagem formal especialmente boa para denotar relações entre números e símbolos. Os químicos usam uma linguagem formal para representar a estrutura química de moléculas. E o mais importante:\n",
     "\n",
-    "> **As linguagens de programação são idiomas formais criados para expressar operações de computação.**\n",
+    "> As linguagens de programação são idiomas formais criados para expressar operações de computação.\n",
     "\n",
-    "As linguagens formais geralmente têm regras de **sintaxe** estritas que governam a estrutura de declarações. Por exemplo, na matemática a declaração 3 + 3 = 6 tem uma sintaxe correta, mas não 3 + = 3\\$6. Na química, $H_2O$ é uma fórmula sintaticamente correta, mas $_2$Zz não é.\n",
+    "As linguagens formais geralmente têm regras de **sintaxe** estritas que governam a estrutura de declarações. Por exemplo, na matemática a declaração 3 + 3 = 6 tem uma sintaxe correta, mas não 3 + = 3\\\\$6. Na química, $H_2O$ é uma fórmula sintaticamente correta, mas $_2$Zz não é.\n",
     "\n",
-    "As regras de sintaxe vêm em duas categorias relativas a símbolos e estrutura. Os **símbolos** são os elementos básicos da linguagem, como palavras, números e elementos químicos. Um dos problemas com 3 + = 3\\$6 é que o \\$ não é um símbolo legítimo na matemática (pelo menos até onde eu sei). De forma similar, $_2$Zz não é legítimo porque não há nenhum elemento com a abreviatura Zz.\n",
+    "As regras de sintaxe vêm em duas categorias relativas a símbolos e estrutura. Os **símbolos** são os elementos básicos da linguagem, como palavras, números e elementos químicos. Um dos problemas com 3 + = 3\\\\$6 é que o \\\\$ não é um símbolo legítimo na matemática (pelo menos até onde eu sei). De forma similar, $_2$Zz não é legítimo porque não há nenhum elemento com a abreviatura Zz.\n",
     "\n",
     "O segundo tipo de regra de sintaxe refere-se ao modo no qual os símbolos são combinados. A equação 3 + = 3 não é legítima porque, embora + e = sejam símbolos legítimos, não se pode ter um na sequência do outro. De forma similar, em uma fórmula química o subscrito vem depois do nome de elemento, não antes.\n",
     "\n",
-    "Esta é um@ frase bem estruturada em portuguê\\$, mas com s\\*mbolos inválidos. Esta frase todos os símbolos válidos tem, mas estrutura válida sem.\n",
+    "Esta é um@ frase bem estruturada em portuguê\\\\$, mas com s\\*mbolos inválidos. Esta frase todos os símbolos válidos tem, mas estrutura válida sem.\n",
     "\n",
     "Ao ler uma frase em português ou uma declaração em uma linguagem formal, é preciso compreender a estrutura (embora em uma linguagem natural você faça isto de forma subconsciente). Este processo é chamado de **análise**.\n",
     "\n",
@@ -487,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
