--- a/Capítulo 06 - Funções com resultado.ipynb
+++ b/Capítulo 06 - Funções com resultado.ipynb
@@ -326,8 +326,8 @@
     "Os principais aspectos do processo são:\n",
     "\n",
     "1. Comece com um programa que funcione e faça pequenas alterações incrementais. Se houver um erro em qualquer ponto, será bem mais fácil encontrá-lo.\n",
-    "2. Use variáveis para guardar valores intermediários, assim poderá exibi-los e verificá-los.\n",
-    "3. Uma vez que o programa esteja funcionando, você pode querer remover uma parte do scaffolding ou consolidar várias instruções em expressões compostas, mas apenas se isso não tornar o programa difícil de ler."
+    "2. Use variáveis para guardar valores intermediários, assim poderá exibí-los e verificá-los.\n",
+    "3. Uma vez que o programa esteja funcionando, você pode querer remover uma parte do _scaffolding_ ou consolidar várias instruções em expressões compostas, mas apenas se isso não tornar o programa difícil de ler."
    ]
   },
   {
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As funções podem retornar booleans, o que pode ser conveniente para esconder testes complicados dentro de funções. Por exemplo:"
+    "As funções podem retornar _booleans_, o que pode ser conveniente para esconder testes complicados dentro de funções. Por exemplo:"
    ]
   },
   {
@@ -534,9 +534,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cobrimos apenas um pequeno subconjunto do Python, mas talvez seja bom você saber que este subconjunto é uma linguagem de programação *completa*, ou seja, qualquer coisa que possa ser calculada pode ser expressa nesta linguagem. Qualquer programa que já foi escrito pode ser reescrito apenas com os recursos da linguagem que você aprendeu até agora (na verdade, seria preciso alguns comandos para dispositivos de controle como mouse, discos etc., mas isso é tudo).\n",
+    "Cobrimos apenas um pequeno subconjunto do Python, mas talvez seja bom você saber que este subconjunto é uma linguagem de programação completa, ou seja, qualquer coisa que possa ser calculada pode ser expressa nesta linguagem. Qualquer programa que já foi escrito pode ser reescrito apenas com os recursos da linguagem que você aprendeu até agora (na verdade, seria preciso alguns comandos para dispositivos de controle como mouse, discos etc., mas isso é tudo).\n",
     "\n",
-    "Comprovar esta declaração é um exercício nada trivial realizado pela primeira vez por Alan Turing, um dos primeiros cientistas da computação (alguns diriam que ele foi matemático, mas muitos dos primeiros cientistas da computação começaram como matemáticos). Assim, é conhecida como a Tese de Turing. Para uma exposição mais completa (e exata) da Tese de Turing, recomendo o livro de Michael Sipser, Introduction to the Theory of Computation (Introdução à teoria da computação, Course Technology, 2012).\n",
+    "Comprovar esta declaração é um exercício nada trivial realizado pela primeira vez por Alan Turing, um dos primeiros cientistas da computação (alguns diriam que ele foi matemático, mas muitos dos primeiros cientistas da computação começaram como matemáticos). Assim, é conhecida como a Tese de Turing. Para uma exposição mais completa (e exata) da Tese de Turing, recomendo o livro de Michael Sipser, _Introduction to the Theory of Computation_ (Introdução à teoria da computação, Course Technology, 2012).\n",
     "\n",
     "Para dar uma ideia do que podemos fazer com as ferramentas que aprendeu até agora, avaliaremos algumas funções matemáticas definidas recursivamente. Uma definição recursiva é semelhante a uma definição circular, no sentido de que a definição contém uma referência à coisa que é definida. Uma definição realmente circular não é muito útil:"
    ]
@@ -695,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seguir o fluxo da execução é uma forma de ler programas, mas poderá ser trabalhoso demais. Uma alternativa é o que chamo de “salto de fé” (leap of faith). Ao chegar a uma chamada de função, em vez de seguir o fluxo de execução suponha que a função esteja funcionando corretamente e que está retornando o resultado certo.\n",
+    "Seguir o fluxo da execução é uma forma de ler programas, mas poderá ser trabalhoso demais. Uma alternativa é o que chamo de “salto de fé” (_leap of faith_). Ao chegar a uma chamada de função, em vez de seguir o fluxo de execução suponha que a função esteja funcionando corretamente e que está retornando o resultado certo.\n",
     "\n",
     "Na verdade, você já está praticando este salto de fé quando usa funções integradas. Quando chama `math.cos` ou `math.exp`, você não examina o corpo dessas funções. Apenas supõe que funcionem porque as pessoas que as escreveram eram bons programadores.\n",
     "\n",
@@ -757,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se tentar seguir o fluxo de execução aqui, até para valores razoavelmente pequenos de n, sua cabeça explode. Porém, seguindo o salto de fé, supondo que as duas chamadas recursivas funcionem corretamente, então é claro que vai receber o resultado correto adicionando-as juntas."
+    "Se tentar seguir o fluxo de execução aqui, até para valores razoavelmente pequenos de `n`, sua cabeça explode. Porém, seguindo o salto de fé, supondo que as duas chamadas recursivas funcionem corretamente, então é claro que vai receber o resultado correto adicionando-as juntas."
    ]
   },
   {
@@ -943,8 +943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se o fluxo de execução parecer confuso a você, este tipo de saída pode ser útil. Leva um tempo para desenvolver um scaffolding eficaz, mas um pouco dele pode economizar muita depuração.\n",
-    "\n"
+    "Se o fluxo de execução parecer confuso a você, este tipo de saída pode ser útil. Leva um tempo para desenvolver um _scaffolding_ eficaz, mas um pouco dele pode economizar muita depuração."
    ]
   },
   {
@@ -1100,7 +1099,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Digite essas funções em um arquivo chamado `palindrome.py` e teste-as. O que acontece se chamar middle com uma string de duas letras? Uma letra? E se a string estiver vazia, escrita com `''` e não contiver nenhuma letra?\n",
+    "1. Digite essas funções em um arquivo chamado `palindrome.py` e teste-as. O que acontece se chamar `middle` com uma string de duas letras? Uma letra? E se a string estiver vazia, escrita com `''` e não contiver nenhuma letra?\n",
     "2. Escreva uma função chamada `is_palindrome` que receba uma string como argumento e retorne `True` se for um palíndromo e `False` se não for. Lembre-se de que você pode usar a função integrada `len` para verificar o comprimento de uma string."
    ]
   },
@@ -1143,7 +1142,7 @@
     "\n",
     "Escreva uma função chamada `gcd` que receba os parâmetros `a` e `b` e devolva o maior divisor comum.\n",
     "\n",
-    "Crédito: Este exercício é baseado em um exemplo do livro de Abelson e Sussman, Structure and Interpretation of Computer Programs (Estrutura e interpretação de programas de computador, MIT Press, 1996)."
+    "Crédito: Este exercício é baseado em um exemplo do livro de Abelson e Sussman, _Structure and Interpretation of Computer Programs_ (Estrutura e interpretação de programas de computador, MIT Press, 1996)."
    ]
   }
  ],
@@ -1163,7 +1162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
