--- a/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
+++ b/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "<p>Este capítulo apresenta um estudo de caso que demonstra o processo de criação de funções que operam simultaneamente.</p>\n",
     "\n",
-    "<p>Ele apresenta o módulo turtle, que permite criar imagens usando [<em>turtle graphics</em>][1]. O módulo <code>turtle</code> é incluído na maior parte das instalações do Python, mas se estiver executando a linguagem com o PythonAnywhere você não poderá executar os exemplos do turtle (pelo menos não era possível quando escrevi este livro).</p>\n",
+    "<p>Ele apresenta o módulo <code>turtle</code>, que permite criar imagens usando [<em>turtle graphics</em>][1]. O módulo <code>turtle</code> é incluído na maior parte das instalações do Python, mas se estiver executando a linguagem com o PythonAnywhere você não poderá executar os exemplos do turtle (pelo menos não era possível quando escrevi este livro).</p>\n",
     "\n",
-    "<p>Se já tiver instalado o Python no seu computador, você poderá executar os exemplos. Caso não, agora é uma boa hora para instalar. Publiquei instruções no site http://tinyurl.com/thinkpython2e.</p>\n",
+    "<p>Se já tiver instalado o Python no seu computador, você poderá executar os exemplos. Caso não, agora é uma boa hora para instalar. Publiquei instruções no site <a href=\"http://tinyurl.com/thinkpython2e\">http://tinyurl.com/thinkpython2e</a>.</p>\n",
     "\n",
-    "<p>Os exemplos de código deste capítulo estão disponíveis em http://thinkpython2.com/code/polygon.py.</p>\n",
+    "<p>Os exemplos de código deste capítulo estão disponíveis em <a href=\"http://thinkpython2.com/code/polygon.py\">http://thinkpython2.com/code/polygon.py</a>.</p>\n",
     "\n",
     "<h2 id=\"41---módulo-turtle\">4.1 - Módulo turtle</h2>\n",
     "\n",
@@ -278,9 +278,9 @@
    "metadata": {},
    "source": [
     "<section class=\"main-content\">\n",
-    "<p>As instruções mais internas, <code>fd</code> e <code>lt</code>, são endentadas duas vezes para mostrar que estão dentro do loop <code>for</code>, que está dentro da definição da função. A linha seguinte, <code>square(bob)</code>, está alinhada à margem esquerda, o que indica tanto o fim do loop <code>for</code> como da definição de função.</p>\n",
+    "<p>As instruções mais internas, <code>forward</code> e <code>left</code>, são endentadas duas vezes para mostrar que estão dentro do loop <code>for</code>, que está dentro da definição da função. A linha seguinte, <code>square(bob)</code>, está alinhada à margem esquerda, o que indica tanto o fim do loop <code>for</code> como da definição de função.</p>\n",
     "\n",
-    "<p>Dentro da função, o <code>t</code> indica o mesmo turtle <code>bob</code>, então <code>t.lt (90)</code> tem o mesmo efeito que <code>bob.lt (90)</code>. Neste caso, por que não chamar o parâmetro <code>bob</code>? A ideia é que <code>t</code> pode ser qualquer turtle, não apenas <code>bob</code>, então você pode criar um segundo turtle e passá-lo como argumento ao <code>square</code>:</p>\n",
+    "<p>Dentro da função, o <code>t</code> indica o mesmo turtle <code>bob</code>, então <code>t.left (90)</code> tem o mesmo efeito que <code>bob.left (90)</code>. Neste caso, por que não chamar o parâmetro <code>bob</code>? A ideia é que <code>t</code> pode ser qualquer turtle, não apenas <code>bob</code>, então você pode criar um segundo turtle e passá-lo como argumento ao <code>square</code>:</p>\n",
     "    </section>"
    ]
   },
