--- a/Capítulo 05 - Condicionais e recursividade.ipynb
+++ b/Capítulo 05 - Condicionais e recursividade.ipynb
@@ -640,7 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este traceback é um pouco maior que o que vimos no capítulo anterior. Quando o erro ocorre, há mil frames de `recurse` na pilha!\n",
+    "Este _traceback_ é um pouco maior que o que vimos no capítulo anterior. Quando o erro ocorre, há mil _frames_ de `recurse` na pilha!\n",
     "\n",
     "Se você escrever em recursividade infinita por engano, confira se a sua função tem um caso-base que não faz uma chamada recursiva. E se houver um caso-base, verifique se você vai mesmo atingí-lo."
    ]
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O módulo `time` fornece uma função, também chamada `time`, que devolve a Hora Média de Greenwich na “época”, que é um momento arbitrário usado como ponto de referência. Em sistemas UNIX, a época é primeiro de janeiro de 1970."
+    "O módulo `time` fornece uma função, também chamada `time`, que devolve a hora média de Greenwich na “época”, que é um momento arbitrário usado como ponto de referência. Em sistemas UNIX, a época é primeiro de janeiro de 1970."
    ]
   },
   {
@@ -982,14 +982,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1° Escreva uma função chamada check_fermat que receba quatro parâmetros – a, b, c e n – e verifique se o teorema de Fermat se mantém. Se *n* for maior que 2 e `a**n + b**n == c**n` o programa deve imprimir, “Holy smokes, Fermat was wrong!” Senão o programa deve exibir “No, that doesn’t work.”"
+    "1° Escreva uma função chamada `check_fermat` que receba quatro parâmetros – `a`, `b`, `c` e `n` – e verifique se o teorema de Fermat se mantém. Se `n` for maior que 2 e `a**n + b**n == c**n` o programa deve imprimir, “_Holy smokes, Fermat was wrong!_” Senão o programa deve exibir “_No, that doesn’t work_.”"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2° Escreva uma função que peça ao usuário para digitar valores para a, b, c e n, os converta em números inteiros e use check_fermat para verificar se violam o teorema de Fermat."
+    "2° Escreva uma função que peça ao usuário para digitar valores para `a`, `b`, `c` e `n`, os converta em números inteiros e use `check_fermat` para verificar se violam o teorema de Fermat."
    ]
   },
   {
@@ -1012,7 +1012,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1° Escreva uma função chamada `is_triangle` que receba três números inteiros como argumentos, e que imprima “Yes” ou “No”, dependendo da possibilidade de formar ou não um triângulo de gravetos com os comprimentos dados."
+    "1° Escreva uma função chamada `is_triangle` que receba três números inteiros como argumentos, e que imprima “_Yes_” ou “_No_”, dependendo da possibilidade de formar ou não um triângulo de gravetos com os comprimentos dados."
    ]
   },
   {
@@ -1062,21 +1062,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1° O que aconteceria se você chamasse esta função desta forma: recurse(-1, 0)?"
+    "1° O que aconteceria se você chamasse esta função desta forma: `recurse(-1, 0)`?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2° Escreva uma docstring que explique tudo o que alguém precisaria saber para usar esta função (e mais nada)."
+    "2° Escreva uma _docstring_ que explique tudo o que alguém precisaria saber para usar esta função (e mais nada)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os seguintes exercícios usam o módulo turtle, descrito no Capítulo 4:"
+    "Os seguintes exercícios usam o módulo `turtle`, descrito no Capítulo 4:"
    ]
   },
   {
@@ -1205,7 +1205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
