--- a/Capítulo 02 - Variáveis, expressões e instruções.ipynb
+++ b/Capítulo 02 - Variáveis, expressões e instruções.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O caractere de sublinhar (_) pode aparecer em um nome. Muitas vezes é usado em nomes com várias palavras, como `your_name ou airspeed_of_unladen_swallow`."
+    "O caractere de sublinhar (\\_) pode aparecer em um nome. Muitas vezes é usado em nomes com várias palavras, como `your_name` ou `airspeed_of_unladen_swallow`."
    ]
   },
   {
@@ -733,7 +733,7 @@
    "metadata": {},
    "source": [
     "1. O volume de uma esfera com raio r é $\\dfrac{4 \\pi r^3}{3}$. Qual é o volume de uma esfera com raio 5?\n",
-    "2. Suponha que o preço de capa de um livro seja R\\$ 24,95, mas as livrarias recebem um desconto de 40%. O transporte custa R$ 3,00 para o primeiro exemplar e 75 centavos para cada exemplar adicional. Qual é o custo total de atacado para 60 cópias?\n",
+    "2. Suponha que o preço de capa de um livro seja R\\\\$ 24,95, mas as livrarias recebem um desconto de 40%. O transporte custa R\\\\$ 3,00 para o primeiro exemplar e 75 centavos para cada exemplar adicional. Qual é o custo total de atacado para 60 cópias?\n",
     "3. Se eu sair da minha casa às 6h52 e correr 1 quilômetro a um certo passo (8min 15s por quilômetro), então 3 quilômetros a um passo mais rápido (7min 12s por quilômetro) e 1 quilômetro no mesmo passo usado em primeiro lugar, que horas chego em casa para o café da manhã?"
    ]
   }
@@ -754,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
