Revising turtle commands to longer description hwich is compatible with mobilechelonian

--- a/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
+++ b/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
@@ -98,13 +98,13 @@
    "metadata": {},
    "source": [
     "<section class=\"main-content\">\n",
-    "<p>O método <code>fd</code> é associado com o objeto turtle, que denominamos <code>bob</code>. Chamar de um método é como fazer um pedido: você está pedindo que <code>bob</code> avance.</p>\n",
+    "<p>O método <code>forward</code> é associado com o objeto turtle, que denominamos <code>bob</code>. Chamar um método é como fazer um pedido: você está pedindo que <code>bob</code> avance.</p>\n",
     "\n",
-    "<p>O argumento de <code>fd</code> é uma distância em píxeis, então o tamanho real depende da sua tela.</p>\n",
+    "<p>O argumento de <code>forward</code> é uma distância em píxeis, então o tamanho real depende da sua tela.</p>\n",
     "\n",
-    "<p>Outros métodos que você pode chamar em um Turtle são <code>bk</code> para mover-se para trás, <code>lt</code> para virar à esquerda e <code>rt</code> para virar à direita. O argumento para <code>lt</code> e <code>rt</code> é um ângulo em graus.</p>\n",
+    "<p>Outros métodos que você pode chamar em um Turtle são <code>backward</code> para mover-se para trás, <code>left</code> para virar à esquerda e <code>right</code> para virar à direita. O argumento para <code>left</code> e <code>right</code> é um ângulo em graus.</p>\n",
     "\n",
-    "<p>Além disso, cada Turtle segura uma caneta, que está abaixada ou levantada; se a caneta estiver abaixada, o Turtle deixa um rastro quando se move. Os métodos <code>pu</code> e <code>pd</code> representam “caneta para cima” e “caneta para baixo”.</p>\n",
+    "<p>Além disso, cada Turtle segura uma caneta, que está abaixada ou levantada; se a caneta estiver abaixada, o Turtle deixa um rastro quando se move. Os métodos <code>penup</code> e <code>pendown</code> representam “caneta para cima” e “caneta para baixo”.</p>\n",
     "\n",
     "<p>Para desenhar um ângulo reto, acrescente estas linhas ao programa (depois de criar <code>bob</code> e antes de chamar o <code>mainloop</code>):</p>\n",
     "    </section>"
